--- a/src/main.scss
+++ b/src/main.scss
@@ -3,37 +3,53 @@
 @import "menu.scss";
 @import "footer.scss";
 
-.top-area-bg {
+.container {
+  margin: 0 auto;
+  padding: 15px;
+  max-width: 1500px;
+
+  &-indent {
+    padding-bottom: 100px;
+    max-width: 957px;
+  }
+
+  &-lg {
+    width: 100%;
+    margin: 30px 60px;
+    position: absolute;
+  }
+
+  &--area {
+    width: 100%;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: flex-start;
+    // justify-content: center;
+  }
+}
+.bg-wrap {
   position: absolute;
-  top: 0;
-  right: 0;
   width: 100%;
-  max-width: 1155px;
-  max-height: 1364px;
-}
+  height: 100%;
+  margin: 0;
+  padding: 0;
 
-.head-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-}
-
-.head-nav {
-  z-index: 1;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 24px;
-  width: 70%;
-  margin-right: 90px;
-  ul {
-    display: flex;
-    justify-content: space-between;
-  }
-  a {
-    color: #ffffff;
+  .top-area-bg {
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-image: url(/images/top-area-fon.png);
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 65%;
   }
 }
+span {
+  font-size: 48px;
+}
+
 h1 {
   font-style: normal;
   font-weight: 500;
@@ -43,16 +59,369 @@ h1 {
   align-items: flex-end;
   letter-spacing: 0.01em;
   color: #555555;
-  width: 626px;
+  max-width: 626px;
 }
+h2 {
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 88px;
+  letter-spacing: 0.05em;
+  color: #555555;
+  position: relative;
+  text-transform: uppercase;
+  margin: 20px 0;
+}
+h3 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 59px;
+  letter-spacing: 0.05em;
+  color: #555555;
+}
+h4 {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #2b6995;
+  white-space: nowrap;
+}
+h5 {
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 37px;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  color: #000000;
+}
+h6 {
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  color: #000000;
+}
+
 .top-area {
-  height: 80vh;
-  max-height: 1110px;
-  z-index: 2;
+  height: 100vh;
+  min-height: 1100px;
+  padding: 10px 0 0 165px;
+
   p {
     font-size: 21px;
-    line-height: 26px;
+    line-height: 40px;
     letter-spacing: 0.03em;
     color: #555555;
+    margin-bottom: 80px;
+    font-weight: 300;
+  }
+}
+.top-area__wrapper {
+  width: 50%;
+}
+
+.button {
+  background: #9dd524;
+  border-radius: 60px;
+  padding: 30px 65px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.01em;
+  text-transform: uppercase;
+  color: #ffffff;
+  &-phone {
+    padding: 20px;
+    display: inline-block;
+    position: absolute;
+    right: 0;
+  }
+}
+.button:active {
+  background: #ffffff;
+  border: 2px solid #9dd524;
+  color: #9dd524;
+  box-shadow: none;
+}
+.button-phone:active {
+  background: #9dd524;
+}
+.link-more {
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.05em;
+  color: #2b6995;
+}
+.flex-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 220px;
+  p {
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 29px;
+    letter-spacing: 0.05em;
+    color: #000000;
+    margin-bottom: 40px;
+  }
+}
+
+.wrap__text {
+  width: 40%;
+  &-action {
+    width: 65%;
+    margin-top: -200px;
+  }
+  p {
+    width: 70%;
+  }
+}
+
+.wrap__image {
+  width: 55%;
+  img {
+    width: 100%;
+  }
+}
+
+.benefits {
+  h2 {
+    text-align: center;
+  }
+  p {
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.05em;
+    text-transform: capitalize;
+  }
+  h5 {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    letter-spacing: 0.05em;
+    text-transform: capitalize;
+  }
+}
+
+.benefits-wrap {
+  display: flex;
+  justify-content: space-between;
+  margin: 100px 0;
+}
+.flex-column {
+  &-left {
+    text-align: right;
+  }
+  &-center {
+    margin: 0 120px;
+  }
+  &-right {
+  }
+}
+.blue-field {
+  background-color: #2b6995;
+  padding: 100px 90px;
+  width: 50%;
+  p,
+  h5 {
+    color: #ffffff;
+  }
+  .flex-wrap {
+    margin: 0;
+
+    .wrap__image {
+      width: 10%;
+    }
+    .wrap__text {
+      width: 70%;
+      p {
+        width: 100%;
+      }
+    }
+  }
+}
+.flex-wrap-team {
+  align-items: flex-start;
+}
+
+.working-steps__line {
+  width: 69%;
+  height: 1px;
+  background-color: #555555;
+  position: absolute;
+  top: 345px;
+}
+.dot {
+  width: 10px;
+  height: 10px;
+  background-color: #555555;
+  border-radius: 20px;
+  position: absolute;
+  top: -5px;
+}
+.dot-1 {
+  left: 0;
+}
+.dot-2 {
+  left: 50%;
+  transform: translateX(-50%);
+}
+.dot-3 {
+  right: 0;
+}
+
+.step {
+  text-align: center;
+  position: relative;
+  padding: 110px 0 0 0;
+  width: 30%;
+  &-button {
+    padding: 0;
+  }
+}
+
+.working-steps {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+}
+.working-steps__circules-flex {
+  display: flex;
+  justify-content: space-between;
+}
+.circule {
+  border: 1px solid #555555;
+  // padding: 15px 33px;
+  width: 90px;
+  height: 90px;
+  border-radius: 90px;
+  font-size: 48px;
+  line-height: 59px;
+  text-align: center;
+  color: #2b6995;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translateX(-50%);
+  &-1 {
+  }
+  &-2 {
+  }
+  &-3 {
+  }
+}
+
+.action {
+  background: linear-gradient(
+    90deg,
+    rgba(43, 105, 149, 0.7) 0%,
+    rgba(115, 169, 196, 0.7) 51.56%,
+    rgba(202, 240, 248, 0.7) 100%
+  );
+  position: relative;
+  width: 100%;
+  &-height {
+    height: 712px;
+    margin-bottom: 200px;
+    margin-top: 260px;
+  }
+  p {
+    font-size: 24px;
+    color: #555555;
+    line-height: 29px;
+    letter-spacing: 0.05em;
+    margin-bottom: 60px;
+  }
+}
+.cell-phone {
+}
+.align-right {
+  text-align: right;
+  margin-bottom: 100px;
+}
+.team {
+  border: 1px solid #c4c4c4;
+  width: 30%;
+  img {
+    height: 320px;
+  }
+}
+.team__blue-field {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  &-1 {
+    background-color: #caf0f8;
+  }
+  &-2 {
+    background-color: #2b6995;
+  }
+  &-3 {
+    background-color: #73a9c4;
+  }
+}
+.team__icon {
+  position: absolute;
+  right: -2px;
+  bottom: -45px;
+  img {
+    width: 90px;
+    height: 90px;
+  }
+}
+.team__text-field {
+  padding: 45px;
+  p {
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.05em;
+    color: #555555;
+  }
+}
+.quotes {
+  font-size: 96px;
+  line-height: 117px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #555555;
+}
+.center {
+  text-align: center;
+}
+.img-absolute {
+  position: absolute;
+  bottom: -100px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.lights {
+  background-color: #fafafa;
+  width: 100%;
+  padding: 100px 0;
+  margin-top: 200px;
+  .flex-wrap {
+    margin-bottom: 0;
+  }
+}
+
+.images-cell {
+  display: flex;
+  justify-content: start;
+  // width: 50%;
+  .images-cell_1 {
+    margin-top: 200px;
+  }
+  .images-cell_2 {
   }
 }
