--- a/src/normalize.scss
+++ b/src/normalize.scss
@@ -1,9 +1,5 @@
 /*Обнуление*/
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
+
 *,
 *:before,
 *:after {
@@ -30,15 +26,11 @@ aside {
 html,
 body {
   font-family: "Montserrat", sans-serif;
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
-  font-size: 14px;
+  font-size: 24px;
   position: relative;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 input,
 button,
@@ -70,13 +62,13 @@ img {
   vertical-align: top;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: inherit;
-  font-weight: 400;
-}
-/*--------------------*/
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6 {
+//   font-size: inherit;
+//   font-weight: 400;
+// }
+// /*--------------------*/
