--- a/src/main.scss
+++ b/src/main.scss
@@ -2,7 +2,9 @@
 @import "header.scss";
 @import "menu.scss";
 @import "footer.scss";
-
+main {
+  margin-bottom: 400px;
+}
 .container {
   margin: 0 auto;
   padding: 15px;
@@ -33,6 +35,7 @@
   height: 100%;
   margin: 0;
   padding: 0;
+  z-index: -1;
 
   .top-area-bg {
     height: 100%;
@@ -60,6 +63,11 @@ h1 {
   letter-spacing: 0.01em;
   color: #555555;
   max-width: 626px;
+  @media screen and (max-width: 1245px) {
+    font-size: 60px;
+    margin: 0;
+    line-height: 85px;
+  }
 }
 h2 {
   font-weight: bold;
@@ -109,7 +117,9 @@ h6 {
   height: 100vh;
   min-height: 1100px;
   padding: 10px 0 0 165px;
-
+  @media screen and (max-width: 1245px) {
+    padding-left: 40px;
+  }
   p {
     font-size: 21px;
     line-height: 40px;
@@ -117,10 +127,18 @@ h6 {
     color: #555555;
     margin-bottom: 80px;
     font-weight: 300;
+    @media screen and (max-width: 1245px) {
+      font-size: 18px;
+      line-height: 25px;
+      width: 70%;
+    }
   }
 }
 .top-area__wrapper {
   width: 50%;
+  @media screen and (max-width: 1245px) {
+    width: 80%;
+  }
 }
 
 .button {
@@ -134,11 +152,18 @@ h6 {
   letter-spacing: 0.01em;
   text-transform: uppercase;
   color: #ffffff;
+  @media screen and (max-width: 1245px) {
+    padding: 20px 30px;
+    font-size: 15px;
+  }
   &-phone {
     padding: 20px;
     display: inline-block;
     position: absolute;
-    right: 0;
+    right: 20px;
+    @media screen and (max-width: 1245px) {
+      padding: 13px;
+    }
   }
 }
 .button:active {
@@ -162,6 +187,7 @@ h6 {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 220px;
+
   p {
     font-weight: normal;
     font-size: 20px;
@@ -256,7 +282,7 @@ h6 {
   height: 1px;
   background-color: #555555;
   position: absolute;
-  top: 345px;
+  top: 122px;
 }
 .dot {
   width: 10px;
@@ -291,6 +317,7 @@ h6 {
   margin-top: 100px;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 .working-steps__circules-flex {
   display: flex;
@@ -343,8 +370,7 @@ h6 {
     margin-bottom: 60px;
   }
 }
-.cell-phone {
-}
+
 .align-right {
   text-align: right;
   margin-bottom: 100px;
@@ -423,5 +449,307 @@ h6 {
     margin-top: 200px;
   }
   .images-cell_2 {
+  }
+}
+
+.card {
+  width: 33.3%;
+  padding: 130px 70px 25px;
+  text-align: center;
+  z-index: 1;
+  position: relative;
+  p {
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    color: #555555;
+  }
+}
+.card:hover {
+  box-shadow: 0px 0px 55px -8px rgba(85, 85, 85, 0.5);
+  cursor: pointer;
+  .green-arrow {
+    display: flex;
+  }
+}
+
+.blue-cube {
+  background: rgba(202, 240, 248, 0.3);
+  width: 240px;
+  height: 240px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto 50px;
+  p {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 44px;
+
+    letter-spacing: 0.05em;
+
+    color: #555555;
+  }
+}
+.blue-cube__inkline {
+  transform: rotate(11.31deg);
+  position: absolute;
+}
+
+.green-arrow {
+  width: 86px;
+  height: 80px;
+  background-color: #9dd524;
+  position: absolute;
+  bottom: -40px;
+  left: 50%;
+  transform: translatex(-50%);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.green-arrow__line {
+  width: 47px;
+  height: 3px;
+  background-color: #fff;
+}
+.green-arrow__arrow {
+  position: absolute;
+  right: 12px;
+}
+.arrow-part {
+  width: 20px;
+  height: 3px;
+  background-color: #fff;
+  position: absolute;
+  right: 3px;
+}
+.arrow-part-1 {
+  transform: rotate(45deg);
+  bottom: 5px;
+}
+.arrow-part-2 {
+  transform: rotate(-45deg);
+  top: 5px;
+}
+
+.action-frase {
+  text-align: center;
+  margin-bottom: 200px;
+  .button {
+    margin: 0 auto 100px;
+    display: flex;
+    justify-content: center;
+    max-width: 233px;
+  }
+  p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    color: #555555;
+    max-width: 902px;
+    margin: 0 auto 50px;
+  }
+  .title {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 59px;
+    letter-spacing: 0.05em;
+    color: #000000;
+  }
+}
+
+.circle-arrow {
+  border: 1px solid #fff;
+  width: 51px;
+  height: 51px;
+  border-radius: 50%;
+  position: relative;
+}
+
+.arrow-part {
+  width: 15px;
+  height: 1px;
+  background-color: #fff;
+  position: absolute;
+  left: 40%;
+  transform: translateX(-50%);
+  &-1 {
+    transform: rotate(-45deg);
+    bottom: 18px;
+  }
+  &-2 {
+    transform: rotate(45deg);
+    top: 20px;
+  }
+}
+.image-card {
+  position: relative;
+  width: 410px;
+  height: 410px;
+  border-radius: 10px;
+  cursor: pointer;
+  overflow: hidden;
+  img {
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+}
+.image-card::before {
+  content: "";
+  background: linear-gradient(270deg, #caf0f8 0%, #73a9c4 50.52%, #2b6995 100%);
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: 0.2s visibility, opacity 0.2s ease-in-out;
+}
+.image-card:hover:before {
+  content: "";
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out;
+}
+.image-card:hover {
+  .circle-arrow {
+    background-color: #fff;
+    .arrow-part {
+      background-color: #000;
+    }
+  }
+}
+
+.image-card__text {
+  position: absolute;
+  top: 20px;
+  left: 50px;
+  p {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 29px;
+    display: flex;
+    align-items: flex-end;
+    letter-spacing: 0.05em;
+    color: #ffffff;
+  }
+}
+.image-card__arrow {
+  position: absolute;
+  left: 50px;
+  bottom: 50px;
+}
+
+.form-wrap {
+  width: 40%;
+  margin: 100px 0;
+}
+.input-field {
+  margin: 50px 0;
+}
+input {
+  padding: 12px 20px;
+  border: none;
+  border-bottom: 1px solid #000000;
+  color: #000;
+  display: inline-block;
+  width: 100%;
+  outline: none;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.05em;
+  color: #000000;
+}
+label {
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  color: #555555;
+}
+.footer-container {
+  position: relative;
+  width: 100%;
+}
+.bg-wrap-foot {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  z-index: -1;
+  .foot-bg {
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-image: url(/images/footer-img.png);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+  }
+}
+
+.content-wrapper {
+  margin: 0 auto;
+  padding: 0 15px;
+  width: 100%;
+  max-width: 1500px;
+  position: absolute;
+  top: 200px;
+}
+.flex-wrap-foot {
+  display: flex;
+  justify-content: space-around;
+}
+.foot-image {
+  width: 100%;
+  position: relative;
+  img {
+    width: 100%;
+  }
+  .phone-image {
+    width: 912px;
+    height: 912px;
+    position: absolute;
+    bottom: 150px;
+    right: 0;
+    z-index: -1;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.navigate {
+  width: 20%;
+  a {
+    display: block;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 45px;
+    letter-spacing: 0.01em;
+    color: #000000;
+  }
+  .flex-wrap {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding-bottom: 20px;
   }
 }
