--- a/src/main.scss
+++ b/src/main.scss
@@ -1,7 +1,9 @@
 @import "normalize.scss";
+@import "menu-box.scss";
 @import "header.scss";
 @import "menu.scss";
 @import "footer.scss";
+
 main {
   margin-bottom: 400px;
 }
