--- a/src/main.scss
+++ b/src/main.scss
@@ -1,147 +1,10 @@
 @import "normalize.scss";
+@import "font-style.scss";
+@import "top-area.scss";
+@import "flex-box.scss";
 @import "menu-box.scss";
 @import "header.scss";
-@import "menu.scss";
 @import "footer.scss";
-
-main {
-  margin-bottom: 400px;
-}
-.container {
-  margin: 0 auto;
-  padding: 15px;
-  max-width: 1500px;
-
-  &-indent {
-    padding-bottom: 100px;
-    max-width: 957px;
-  }
-
-  &-lg {
-    width: 100%;
-    margin: 30px 60px;
-    position: absolute;
-  }
-
-  &--area {
-    width: 100%;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: flex-start;
-    // justify-content: center;
-  }
-}
-.bg-wrap {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  z-index: -1;
-
-  .top-area-bg {
-    height: 100%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: top right;
-    background-image: url(/images/top-area-fon.png);
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 65%;
-  }
-}
-span {
-  font-size: 48px;
-}
-
-h1 {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 100px;
-  line-height: 122px;
-  display: flex;
-  align-items: flex-end;
-  letter-spacing: 0.01em;
-  color: #555555;
-  max-width: 626px;
-  @media screen and (max-width: 1245px) {
-    font-size: 60px;
-    margin: 0;
-    line-height: 85px;
-  }
-}
-h2 {
-  font-weight: bold;
-  font-size: 64px;
-  line-height: 88px;
-  letter-spacing: 0.05em;
-  color: #555555;
-  position: relative;
-  text-transform: uppercase;
-  margin: 20px 0;
-}
-h3 {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 48px;
-  line-height: 59px;
-  letter-spacing: 0.05em;
-  color: #555555;
-}
-h4 {
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 44px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #2b6995;
-  white-space: nowrap;
-}
-h5 {
-  font-weight: bold;
-  font-size: 30px;
-  line-height: 37px;
-  letter-spacing: 0.05em;
-  text-transform: capitalize;
-  color: #000000;
-}
-h6 {
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
-  letter-spacing: 0.05em;
-  text-transform: capitalize;
-  color: #000000;
-}
-
-.top-area {
-  height: 100vh;
-  min-height: 1100px;
-  padding: 10px 0 0 165px;
-  @media screen and (max-width: 1245px) {
-    padding-left: 40px;
-  }
-  p {
-    font-size: 21px;
-    line-height: 40px;
-    letter-spacing: 0.03em;
-    color: #555555;
-    margin-bottom: 80px;
-    font-weight: 300;
-    @media screen and (max-width: 1245px) {
-      font-size: 18px;
-      line-height: 25px;
-      width: 70%;
-    }
-  }
-}
-.top-area__wrapper {
-  width: 50%;
-  @media screen and (max-width: 1245px) {
-    width: 80%;
-  }
-}
 
 .button {
   background: #9dd524;
@@ -154,29 +17,35 @@ h6 {
   letter-spacing: 0.01em;
   text-transform: uppercase;
   color: #ffffff;
+
   @media screen and (max-width: 1245px) {
     padding: 20px 30px;
     font-size: 15px;
   }
+
   &-phone {
     padding: 20px;
     display: inline-block;
     position: absolute;
     right: 20px;
+
     @media screen and (max-width: 1245px) {
       padding: 13px;
     }
   }
 }
+
 .button:active {
   background: #ffffff;
   border: 2px solid #9dd524;
   color: #9dd524;
   box-shadow: none;
 }
+
 .button-phone:active {
   background: #9dd524;
 }
+
 .link-more {
   font-weight: normal;
   font-size: 18px;
@@ -184,50 +53,19 @@ h6 {
   letter-spacing: 0.05em;
   color: #2b6995;
 }
-.flex-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 220px;
-
-  p {
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 29px;
-    letter-spacing: 0.05em;
-    color: #000000;
-    margin-bottom: 40px;
-  }
-}
-
-.wrap__text {
-  width: 40%;
-  &-action {
-    width: 65%;
-    margin-top: -200px;
-  }
-  p {
-    width: 70%;
-  }
-}
-
-.wrap__image {
-  width: 55%;
-  img {
-    width: 100%;
-  }
-}
 
 .benefits {
   h2 {
     text-align: center;
   }
+
   p {
     font-size: 18px;
     line-height: 22px;
     letter-spacing: 0.05em;
     text-transform: capitalize;
   }
+
   h5 {
     font-style: normal;
     font-weight: bold;
@@ -243,38 +81,47 @@ h6 {
   justify-content: space-between;
   margin: 100px 0;
 }
+
 .flex-column {
   &-left {
     text-align: right;
   }
+
   &-center {
     margin: 0 120px;
   }
+
   &-right {
   }
 }
+
 .blue-field {
   background-color: #2b6995;
   padding: 100px 90px;
   width: 50%;
+
   p,
   h5 {
     color: #ffffff;
   }
+
   .flex-wrap {
     margin: 0;
 
     .wrap__image {
       width: 10%;
     }
+
     .wrap__text {
       width: 70%;
+
       p {
         width: 100%;
       }
     }
   }
 }
+
 .flex-wrap-team {
   align-items: flex-start;
 }
@@ -286,6 +133,7 @@ h6 {
   position: absolute;
   top: 122px;
 }
+
 .dot {
   width: 10px;
   height: 10px;
@@ -293,16 +141,19 @@ h6 {
   border-radius: 20px;
   position: absolute;
   top: -5px;
-}
-.dot-1 {
-  left: 0;
-}
-.dot-2 {
-  left: 50%;
-  transform: translateX(-50%);
-}
-.dot-3 {
-  right: 0;
+
+  &-1 {
+    left: 0;
+  }
+
+  &-2 {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  &-3 {
+    right: 0;
+  }
 }
 
 .step {
@@ -310,6 +161,7 @@ h6 {
   position: relative;
   padding: 110px 0 0 0;
   width: 30%;
+
   &-button {
     padding: 0;
   }
@@ -321,10 +173,12 @@ h6 {
   justify-content: center;
   position: relative;
 }
+
 .working-steps__circules-flex {
   display: flex;
   justify-content: space-between;
 }
+
 .circule {
   border: 1px solid #555555;
   // padding: 15px 33px;
@@ -359,11 +213,13 @@ h6 {
   );
   position: relative;
   width: 100%;
+
   &-height {
     height: 712px;
     margin-bottom: 200px;
     margin-top: 260px;
   }
+
   p {
     font-size: 24px;
     color: #555555;
@@ -377,23 +233,29 @@ h6 {
   text-align: right;
   margin-bottom: 100px;
 }
+
 .team {
   border: 1px solid #c4c4c4;
   width: 30%;
+
   img {
     height: 320px;
   }
 }
+
 .team__blue-field {
   position: relative;
   display: flex;
   justify-content: center;
+
   &-1 {
     background-color: #caf0f8;
   }
+
   &-2 {
     background-color: #2b6995;
   }
+
   &-3 {
     background-color: #73a9c4;
   }
@@ -402,13 +264,16 @@ h6 {
   position: absolute;
   right: -2px;
   bottom: -45px;
+
   img {
     width: 90px;
     height: 90px;
   }
 }
+
 .team__text-field {
   padding: 45px;
+
   p {
     font-size: 18px;
     line-height: 22px;
@@ -416,6 +281,7 @@ h6 {
     color: #555555;
   }
 }
+
 .quotes {
   font-size: 96px;
   line-height: 117px;
@@ -423,9 +289,11 @@ h6 {
   letter-spacing: 0.05em;
   color: #555555;
 }
+
 .center {
   text-align: center;
 }
+
 .img-absolute {
   position: absolute;
   bottom: -100px;
@@ -438,6 +306,7 @@ h6 {
   width: 100%;
   padding: 100px 0;
   margin-top: 200px;
+
   .flex-wrap {
     margin-bottom: 0;
   }
@@ -447,9 +316,11 @@ h6 {
   display: flex;
   justify-content: start;
   // width: 50%;
+
   .images-cell_1 {
     margin-top: 200px;
   }
+
   .images-cell_2 {
   }
 }
@@ -460,6 +331,7 @@ h6 {
   text-align: center;
   z-index: 1;
   position: relative;
+
   p {
     font-size: 20px;
     line-height: 24px;
@@ -468,9 +340,11 @@ h6 {
     color: #555555;
   }
 }
+
 .card:hover {
   box-shadow: 0px 0px 55px -8px rgba(85, 85, 85, 0.5);
   cursor: pointer;
+
   .green-arrow {
     display: flex;
   }
@@ -485,16 +359,16 @@ h6 {
   justify-content: center;
   align-items: center;
   margin: 0 auto 50px;
+
   p {
     font-weight: bold;
     font-size: 36px;
     line-height: 44px;
-
     letter-spacing: 0.05em;
-
     color: #555555;
   }
 }
+
 .blue-cube__inkline {
   transform: rotate(11.31deg);
   position: absolute;
@@ -518,10 +392,12 @@ h6 {
   height: 3px;
   background-color: #fff;
 }
+
 .green-arrow__arrow {
   position: absolute;
   right: 12px;
 }
+
 .arrow-part {
   width: 20px;
   height: 3px;
@@ -529,10 +405,12 @@ h6 {
   position: absolute;
   right: 32px;
 }
+
 .arrow-part-1 {
   transform: rotate(45deg);
   bottom: -6px;
 }
+
 .arrow-part-2 {
   transform: rotate(-45deg);
   top: -6px;
@@ -541,12 +419,14 @@ h6 {
 .action-frase {
   text-align: center;
   margin-bottom: 200px;
+
   .button {
     margin: 0 auto 100px;
     display: flex;
     justify-content: center;
     max-width: 233px;
   }
+
   p {
     font-style: normal;
     font-weight: normal;
@@ -558,6 +438,7 @@ h6 {
     max-width: 902px;
     margin: 0 auto 50px;
   }
+
   .title {
     font-style: normal;
     font-weight: normal;
@@ -583,15 +464,18 @@ h6 {
   position: absolute;
   left: 40%;
   transform: translateX(-50%);
+
   &-1 {
     transform: rotate(-45deg);
     bottom: 18px;
   }
+
   &-2 {
     transform: rotate(45deg);
     top: 20px;
   }
 }
+
 .image-card {
   position: relative;
   width: 410px;
@@ -599,12 +483,14 @@ h6 {
   border-radius: 10px;
   cursor: pointer;
   overflow: hidden;
+
   img {
     width: 100%;
     height: 100%;
     z-index: -1;
   }
 }
+
 .image-card::before {
   content: "";
   background: linear-gradient(270deg, #caf0f8 0%, #73a9c4 50.52%, #2b6995 100%);
@@ -617,15 +503,18 @@ h6 {
   top: 0;
   transition: 0.2s visibility, opacity 0.2s ease-in-out;
 }
+
 .image-card:hover:before {
   content: "";
   visibility: visible;
   opacity: 1;
   transition: opacity 0.2s ease-in-out;
 }
+
 .image-card:hover {
   .circle-arrow {
     background-color: #fff;
+
     .arrow-part {
       background-color: #000;
     }
@@ -636,6 +525,7 @@ h6 {
   position: absolute;
   top: 20px;
   left: 50px;
+
   p {
     font-weight: bold;
     font-size: 24px;
@@ -646,6 +536,7 @@ h6 {
     color: #ffffff;
   }
 }
+
 .image-card__arrow {
   position: absolute;
   left: 50px;
@@ -656,9 +547,11 @@ h6 {
   width: 40%;
   margin: 100px 0;
 }
+
 .input-field {
   margin: 50px 0;
 }
+
 input {
   padding: 12px 20px;
   border: none;
@@ -672,16 +565,19 @@ input {
   letter-spacing: 0.05em;
   color: #000000;
 }
+
 label {
   font-size: 20px;
   line-height: 24px;
   letter-spacing: 0.04em;
   color: #555555;
 }
+
 .footer-container {
   position: relative;
   width: 100%;
 }
+
 .bg-wrap-foot {
   position: absolute;
   width: 100%;
@@ -689,6 +585,7 @@ label {
   margin: 0;
   padding: 0;
   z-index: -1;
+
   .foot-bg {
     height: 100%;
     background-size: contain;
@@ -711,16 +608,20 @@ label {
   position: absolute;
   top: 200px;
 }
+
 .flex-wrap-foot {
   display: flex;
   justify-content: space-around;
 }
+
 .foot-image {
   width: 100%;
   position: relative;
+
   img {
     width: 100%;
   }
+
   .phone-image {
     width: 912px;
     height: 912px;
@@ -728,6 +629,7 @@ label {
     bottom: 150px;
     right: 0;
     z-index: -1;
+
     img {
       width: 100%;
       height: 100%;
@@ -737,6 +639,7 @@ label {
 
 .navigate {
   width: 20%;
+
   a {
     display: block;
     font-weight: bold;
@@ -745,6 +648,7 @@ label {
     letter-spacing: 0.01em;
     color: #000000;
   }
+
   .flex-wrap {
     display: flex;
     justify-content: space-around;
