--- a/src/header.scss
+++ b/src/header.scss
@@ -3,6 +3,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+
+  @media screen and (max-width: 902px) {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
 }
 
 .head-nav {
