--- a/src/top-area.scss
+++ b/src/top-area.scss
@@ -17,6 +17,10 @@
     top: 0;
     right: 0;
     width: 65%;
+
+    @media screen and (max-width: 902px) {
+      display: none;
+    }
   }
 }
 
@@ -29,8 +33,12 @@
     padding-left: 40px;
     min-height: auto;
   }
+  @media screen and (max-width: 902px) {
+  }
+
   @media screen and (max-width: 640px) {
     height: 100vh;
+    padding: 0;
   }
 
   p {
@@ -42,9 +50,12 @@
     font-weight: 300;
 
     @media screen and (max-width: 1245px) {
-      font-size: 18px;
+      font-size: 16px;
       line-height: 25px;
-      width: 70%;
+      width: 50%;
+    }
+    @media screen and (max-width: 902px) {
+      width: 100%;
     }
   }
 }
@@ -53,6 +64,46 @@
   width: 50%;
 
   @media screen and (max-width: 1245px) {
-    width: 80%;
+    width: 100%;
   }
+}
+
+.button {
+  background: #9dd524;
+  border-radius: 60px;
+  padding: 30px 65px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.01em;
+  text-transform: uppercase;
+  color: #ffffff;
+
+  @media screen and (max-width: 1245px) {
+    padding: 15px 40px;
+    font-size: 16px;
+  }
+
+  &-phone {
+    padding: 20px;
+    display: inline-block;
+    position: absolute;
+    right: 20px;
+
+    @media screen and (max-width: 1245px) {
+      padding: 13px;
+    }
+  }
+}
+
+.button:active {
+  background: #ffffff;
+  border: 2px solid #9dd524;
+  color: #9dd524;
+  box-shadow: none;
+}
+
+.button-phone:active {
+  background: #9dd524;
 }
