--- a/src/top-area.scss
+++ b/src/top-area.scss
@@ -26,7 +26,7 @@
 
 .top-area {
   height: 70vh;
-  // min-height: 1100px;
+  min-height: 1100px;
   padding: 10px 0 0 165px;
 
   @media screen and (max-width: 1245px) {
