--- a/src/menu-box.scss
+++ b/src/menu-box.scss
@@ -9,7 +9,7 @@
   &__btn {
     display: none;
     align-items: center;
-    position: fixed;
+    position: absolute;
     top: 30px;
     right: 50px;
     width: 35px;
