--- a/src/choices.scss
+++ b/src/choices.scss
@@ -1,9 +1,45 @@
 .blue-card {
   background: #2b6995;
   border-radius: 20px 45px 45px 45px;
-  width: 330px;
+  width: 320px;
   height: 240px;
-
+  padding: 60px;
+  position: relative;
   .text-wrap {
+    position: absolute;
+    bottom: 60px;
+
+    h5 {
+      font-size: 48px;
+      @media screen and (max-width: 1200px) {
+        font-size: 24px;
+      }
+    }
+    p {
+      @media screen and (max-width: 1200px) {
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+.dots {
+
+  .dot-green {
+    width: 13px;
+    height: 13px;
+    background: #9DD524;
+    position: absolute;
+    top: 54px;
+    right: 53px;
+  }
+  
+  .dot-blue {
+    width: 20px;
+    height: 20px;
+    background: #CAF0F8;
+    position: absolute;
+    top: 82px;
+    right: 82px;
   }
 }
