--- a/src/flex-box.scss
+++ b/src/flex-box.scss
@@ -6,11 +6,6 @@ main {
   padding: 15px;
   max-width: 1500px;
 
-  &-indent {
-    padding-bottom: 100px;
-    max-width: 957px;
-  }
-
   &-lg {
     width: 100%;
     margin: 30px 60px;
@@ -82,9 +77,20 @@ main {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  
 }
 
+
 .flex-wrap-team {
-  align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+  @media screen and (max-width: 1000px) {
+    display: block;
+  }
+}
+
+.flex-wrap-constant {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  text-align: center;
 }
