--- a/src/font-style.scss
+++ b/src/font-style.scss
@@ -108,3 +108,27 @@ margin: 0;
 .fs-48 {
   font-size: 48px;
 }
+
+// text alignment
+
+.tac {
+  text-align: center;
+}
+
+.quotes {
+  font-size: 96px;
+  line-height: 117px;
+  text-align: center;
+  letter-spacing: 0.05em;
+}
+
+p {
+  font-size: 24px;
+  line-height: 29px;
+  letter-spacing: 0.05em;
+  margin-bottom: 29px;
+  
+  @media screen and (max-width: 1200) {
+    font-size: 18px;
+  }
+}
