--- a/src/margin.scss
+++ b/src/margin.scss
@@ -10,7 +10,7 @@
     margin-top: 30px;
 }
 
-.mt-50px {
+.mt-50 {
     margin-top: 50px;
 }
 
@@ -18,6 +18,18 @@
     margin-top: 95px;
 }
 
+.mb-100 {
+    margin-bottom: 100px;
+}
+
 .m-0 {
     margin: 0;
+}
+
+.m-side20 {
+    margin: auto 20px;
+
+    @media screen and (max-width: 902px) {
+        margin: 0;
+    }
 }
